# router.js
@@ -6,12 +6,14 @@
 const Router = require('koa-router')();
 const auth = require('./api/auth');
 const user = require('./api/user');
+const admin=require('./api/admin');
 const apiDoc = require('./api/apiDoc');
 
 module.exports = function (app) {
   Router.use('/', apiDoc.routes(), auth.allowedMethods());
   Router.use('/auth', auth.routes(), auth.allowedMethods());
-  Router.use('/user', user.routes(), auth.allowedMethods());
+  Router.use('/user', user.routes(), user.allowedMethods());
+  Router.use('/admin', admin.routes(), admin.allowedMethods());
   Router.get("/*", function *() {
     this.body = {code: 0, data: "齐超是个帅比"};
   });
